# segment-plugin

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run.py
segment_plugin/: __init__.py  segment.py  segment_pd.py
src/: expressions.rs  funcs.rs  lib.rs
