[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "segment-plugin"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
    "polars>=1.31.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
pandas = ["pandas>=2.2.3"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "segment_plugin._internal"